--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -1,10 +1,13 @@
 <html>
-  <body>
-    <p>
-      Welcome to CUS 1172.
-    </p>
-    <p>
-      This is the milestone 1 project.
-    </p>
-  </body>
+    <body>
+        <p>
+            Welcome to CUS 1172.
+        </p>
+        <p>
+            This is an intro to web devolopment.
+        </p>
+        <p>
+            Lesson 1.
+        </p>
+    </body>
 </html>
