--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -79,7 +79,7 @@
     <div id="favorites">
         <h1>Favorite Song, Film, and TV Show</h1>
         <p><strong>Favorite Song:</strong></p>
-        <iframe width="320" height="240" src="https://www.youtube.com/embed/dQw4w9WgXcQ title="Favorite Song" allowfullscreen></iframe>
+        <iframe width="320" height="240" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Favorite Song" allowfullscreen></iframe>
 
         <p><strong>Favorite Movie:</strong></p>
         <iframe width="320" height="240" src="https://www.youtube.com/embed/PJ6rZZssqEg" title="Favorite Movie" allowfullscreen></iframe>
