--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -100,7 +100,7 @@
     <div id="projects">
         <h1>My Projects in This Course</h1>
         <ul>
-            <li><a href="https://github.com/artav23/CUS1172_avery/tree/main/milestone1" target="_blank">1: HTML Profile Page</a></li>
+            <li><a href="https://artav23.github.io/CUS1172_avery/milestone1/index.html" target="_blank">1: HTML Profile Page</a></li>
         </ul>
     </div>
 
