--- a/milestone2/index.html
+++ b/milestone2/index.html
@@ -81,10 +81,8 @@
 
     <!-- Favorite Song, Film, and TV Show -->
     <div id="favorites">
-        <h1>Favorite Song, Film, and TV Show</h1>
-        <p><strong>Favorite Song:</strong></p>
-        <iframe width="320" height="240" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Favorite Song" allowfullscreen></iframe>
-
+        <h1>Favorite Film, and TV Show</h1>
+        
         <p><strong>Favorite Movie:</strong></p>
         <iframe width="320" height="240" src="https://www.youtube.com/embed/PJ6rZZssqEg" title="Favorite Movie" allowfullscreen></iframe>
 
