--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -101,6 +101,7 @@
         <h1>My Projects in This Course</h1>
         <ul>
             <li><a href="https://artav23.github.io/CUS1172_avery/milestone1/index.html" target="_blank">1: HTML Profile Page</a></li>
+            <li><a href="https://artav23.github.io/CUS1172_avery/milestone2/index.html" target="_blank">2: Stylized Profile Page</a></li>
         </ul>
     </div>
 
