--- a/milestone3/index.html
+++ b/milestone3/index.html
@@ -178,7 +178,7 @@
                     <ul class="list-group">
                         <li class="list-group-item"><a href="https://artav23.github.io/CUS1172_avery/milestone1/index.html">1: HTML Profile Page</a></li>
                         <li class="list-group-item"><a href="https://artav23.github.io/CUS1172_avery/milestone2/index.html">2: Stylized Profile Page</a></li>
-                        <li class="list-group-item"><a href="https://artav23.github.io/CUS1172_avery/milestone3/index.html">2: Stylized Profile Page</a></li>
+                        <li class="list-group-item"><a href="https://artav23.github.io/CUS1172_avery/milestone3/index.html">3: Bootstrap Profile Page</a></li>
                     </ul>
                 </div>
             </div>
