--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -102,6 +102,7 @@
         <ul>
             <li><a href="https://artav23.github.io/CUS1172_avery/milestone1/index.html" target="_blank">1: HTML Profile Page</a></li>
             <li><a href="https://artav23.github.io/CUS1172_avery/milestone2/index.html" target="_blank">2: Stylized Profile Page</a></li>
+            <li><a href="https://artav23.github.io/CUS1172_avery/milestone3/index.html" target="_blank">3: Bootstrap Profile Page</a></li>
         </ul>
     </div>
 
